<resources>
    <string name="app_name">Pokémon</string>
    <string name="pokemon">Pokémon</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="types">Types</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="abilities">Abilities</string>
    <string name="ability">Ability</string>
    <string name="stats">Stats</string>
    <string name="stat">Stat</string>
    <string name="speed">Speed</string>
    <string name="s_def">S. Def.:</string>
    <string name="def">Def:</string>
    <string name="s_atk">S. Atk.:</string>
    <string name="attack">Attack:</string>
    <string name="hp">HP:</string>
    <string name="count">250</string>
    <string name="empty"> </string>
    <string name="fairy">fairy</string>
    <string name="bug">bug</string>
    <string name="dark">dark</string>
    <string name="dragon">dragon</string>
    <string name="electric">electric</string>
    <string name="fighting">fighting</string>
    <string name="fire">fire</string>
    <string name="flying">flying</string>
    <string name="ghost">ghost</string>
    <string name="grass">grass</string>
    <string name="ground">ground</string>
    <string name="ice">ice</string>
    <string name="normal">normal</string>
    <string name="poison">poison</string>
    <string name="psychic">psychic</string>
    <string name="rock">rock</string>
    <string name="steel">steel</string>
    <string name="water">water</string>
    <string name="move">Move</string>
    <string name="moves">Moves</string>
    <string name="value">Value</string>
    <string name="pokemons_">Pokémons:</string>
    <string name="power_">Power:</string>
    <string name="power_points_">Power points:</string>
    <string name="accuracy_">Accuracy:</string>
    <string name="damage_class_">Damage class:</string>
    <string name="type_">Type:</string>
    <string name="effect_entries_">Effect entries:</string>
    <string name="target_">Target:</string>
    <string name="moves_">Moves:</string>
    <string name="double_damage_from_">Double damage from:</string>
    <string name="half_damage_from_">Half damage from:</string>
    <string name="no_damage_from_">No damage from:</string>
    <string name="half_damage_to_">Half damage to:</string>
    <string name="no_damage_to_">No damage to:</string>
    <string name="double_damage_to_">Double damage to:</string>
    <string name="favorite_question">Do you really want to favorite this Pokémon?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="favorite_success">Pokémon included to your favorite list</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="delete_favorite_title">Delete favorite</string>
    <string name="sure_delete">Are you sure you want to delete this Pokémon from your favorite list?</string>
    <string name="deleted_character">Pokémon deleted successfully</string>
    <string name="search_one_pok_mon">Search one pokémon:</string>
</resources>